fix: visibility

--- a/src/index.scss
+++ b/src/index.scss
@@ -76,7 +76,7 @@ main {
       }
 
       input[type='checkbox'] {
-        margin-right: 5px;
+        margin: 0 5px;
       }
 
       button {
